--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "typescript": "^5.3.3"
   },
   "dependencies": {
+    "@allo-team/allo-v2-sdk": "^1.0.49",
     "axios": "^1.6.7",
     "csv-parse": "^5.5.3",
     "ethers": "^5.7.0"
