--- a/package.json
+++ b/package.json
@@ -19,14 +19,18 @@
   "homepage": "https://github.com/grants-stack-frontier/lifi-testing#readme",
   "devDependencies": {
     "@types/node": "^20.11.19",
+    "prettier": "3.2.5",
     "ts-node": "^10.9.2",
     "tslib": "^2.6.2",
     "typescript": "^5.3.3"
   },
   "dependencies": {
     "@allo-team/allo-v2-sdk": "^1.0.49",
+    "@uniswap/permit2-sdk": "^1.2.0",
     "axios": "^1.6.7",
     "csv-parse": "^5.5.3",
-    "ethers": "^5.7.0"
+    "ethers": "^5.7.0",
+    "ms": "^2.1.3",
+    "ms-typescript": "^2.0.0"
   }
 }
