--- a/package.json
+++ b/package.json
@@ -29,8 +29,10 @@
     "@uniswap/permit2-sdk": "^1.2.0",
     "axios": "^1.6.7",
     "csv-parse": "^5.5.3",
+    "dotenv": "^16.4.5",
     "ethers": "^5.7.0",
     "ms": "^2.1.3",
-    "ms-typescript": "^2.0.0"
+    "ms-typescript": "^2.0.0",
+    "viem": "^2.7.14"
   }
 }
