--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "ts-node --typeCheck=false main.ts",
+    "start": "ts-node -r dotenv/config --typeCheck=false main.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -26,9 +26,11 @@
   },
   "dependencies": {
     "@allo-team/allo-v2-sdk": "^1.0.49",
+    "@tenderly/sdk": "^0.2.1",
     "@uniswap/permit2-sdk": "^1.2.0",
     "axios": "^1.6.7",
     "csv-parse": "^5.5.3",
+    "csv-stringify": "^6.4.5",
     "dotenv": "^16.4.5",
     "ethers": "^5.7.0",
     "ms": "^2.1.3",
