--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "dependencies": {
     "@allo-team/allo-v2-sdk": "^1.0.49",
+    "@connext/sdk": "^2.1.2",
     "@tenderly/sdk": "^0.2.1",
     "@uniswap/permit2-sdk": "^1.2.0",
     "axios": "^1.6.7",
