--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "@allo-team/allo-v2-sdk": "^1.0.49",
     "@connext/sdk": "^2.1.2",
+    "@decent.xyz/box-common": "^2.0.1",
     "@inquirer/prompts": "^4.1.0",
     "@tenderly/sdk": "^0.2.1",
     "@uniswap/permit2-sdk": "^1.2.0",
