(chore): cleanup env vars

--- a/.env.template
+++ b/.env.template
@@ -2,5 +2,10 @@ TENDERLY_ACCOUNT_NAME=
 TENDERLY_PROJECT_NAME=
 TENDERLY_ACCESS_KEY=
 TENDERLY_API_URL=
-TENDERLY_FORK_RPC=
+
+TENDERLY_OPTIMISM_RPC_URL=
+TENDERLY_POLYGON_RPC_URL=
+
 SHEET_BEST_URL=
+
+DECENT_API_KEY=
